--- a/static/css/sigin-up.css
+++ b/static/css/sigin-up.css
@@ -36,15 +36,28 @@
   
 }
 .signup{
+    margin: 0 auto;
+    width: fit-content;
     display: flex;
     flex-direction: column;
-    align-items: self-end;
+    align-items: flex-end;
+    justify-content:flex-end;
+}
+.signup > button[type="submit"], .button > button[type="submit"]{
+    margin: 0 auto;
+    align-items: flex-end;
+    justify-content:center;
+    font-size: 2rem;
 }
 
 @media (max-width:768px){
     .sing-in-container{
         margin-bottom: 20px;
         padding: 50px;
+    }
+    .signup > p{
+        display: flex;
+        flex-direction: column;
     }
 }
 
